firefox-trunk (93.0~a1~hg20210809r588278-0ubuntu1) UNRELEASED; urgency=medium

  * Update patches
    - debian/patches/armhf-reduce-linker-memory-use.patch
    - debian/patches/ubuntu-ua-string-changes.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 10 Aug 2021 08:03:56 +0200

firefox-trunk (92.0~a1~hg20210808r588154-0ubuntu1) impish; urgency=medium

  * Update cbindgen to 0.20.0
    - debian/build/create-tarball.py
  * Drop superfluous alternative for clang 8
    - debian/control{,.in}
    - debian/build/rules.mk
  * Update patches
    - debian/patches/armhf-do-not-build-qcms-with-neon.patch
    - debian/patches/armhf-reduce-linker-memory-use.patch
  * Remove patches that are no longer needed
    - debian/patches/armhf-disable-unaligned-fp-access-emulation.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sun, 08 Aug 2021 13:19:58 +0200

firefox-trunk (91.0~a1~hg20210712r585270-0ubuntu1) impish; urgency=medium

  * Drop upstreamed patches
    - debian/patches/sandbox-update-arm-syscall-numbers.patch
  * Update patches
    - debian/patches/fix-armhf-webrtc-build.patch
    - debian/patches/rust-drop-dll-checksums.patch
    - debian/patches/ubuntu-ua-string-changes.patch
  * Bump build-dep on rustc >= 1.51.0 and cargo >= 0.52
    - debian/control{,.in}

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Mon, 12 Jul 2021 12:49:50 +0200

firefox-trunk (90.0~a1~hg20210529r581381-0ubuntu1) impish; urgency=medium

  * Drop gtk2 dependency
    - debian/control{,.in}
    - debian/firefox.install.in
  * Bump build-deps on gtk+-3.0 >= 3.14, glib2.0 >= 2.42
    - debian/control{,.in}
  * Update patches
    - debian/patches/reduce-rust-debuginfo.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sat, 29 May 2021 11:12:55 +0200

firefox-trunk (89.0~a1~hg20210418r576467-0ubuntu1) hirsute; urgency=medium

  * Pass NASM only on supported archs
    - debian/config/mozconfig.in
  * Reduce the LTO level (to "thin") on arm64 to work around OOM failures on
    Launchpad builders