@@ -105,7 +105,7 @@ ifeq (,$(filter i386 amd64, $(DEB_HOST_ARCH)))
 MOZ_BUILD_PGO = 0
 endif
 
-LLVM_VERSIONS = 12 11 10
+LLVM_VERSIONS = 13 12 11 10
 DEB_LLVM_VERSION = $(firstword $(foreach llvm_version, $(LLVM_VERSIONS), \
 	$(if $(shell which clang-$(llvm_version)), $(llvm_version))))
 
