@@ -38,9 +38,9 @@ Build-Depends: cdbs,
 	xvfb,
 	python3 (>= 3.6),
 	libffi-dev (>= 3.0.9) [powerpc ppc64el s390x],
-	clang-12 | clang-11 | clang-10,
-	libclang-12-dev | libclang-11-dev | libclang-10-dev,
-	llvm-12-dev | llvm-11-dev | llvm-10-dev,
+	clang-13 | clang-12 | clang-11 | clang-10,
+	libclang-13-dev | libclang-12-dev | libclang-11-dev | libclang-10-dev,
+	llvm-13-dev | llvm-12-dev | llvm-11-dev | llvm-10-dev,
 	cargo (>= 0.52),
 	rustc (>= 1.51.0),
 	nodejs (>= 10.21) | nodejs-mozilla (>= 10.21),
